# splendor

./: .gitignore  pyproject.toml  readme.md  shell.nix
data/: __init__.py
game/: __init__.py  actions.py  coins.py  errors.py  game.py  player.py
splendor/: __init__.py  basic_clients.py  data.py  runner.py
splendor/game/: __init__.py  actions.py  coins.py  errors.py  game.py  player.py
splendor/interfaces/: __init__.py  base.py  runner.py
splendor/interfaces/ai/: __init__.py  minmax.py
splendor/interfaces/tui/: __init__.py  client.py  utils.py  view.py
splendor/tui/: __init__.py  client.py  utils.py  view.py
tests/: test_actions.py  test_ai_minmax.py  test_coins.py  test_constants.py  test_game.py  test_splendor.py
