[tool.poetry]
name = "splendor"
version = "0.1.0"
description = "An implementation of the Splendor game to test AIs with my brother."
authors = ["ddorn <diego.dorn@free.fr>"]

[tool.poetry.dependencies]
python = "^3.7"
prompt-toolkit = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ptpython = "^3.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
